try to fix differencies on ios

--- a/frontend/src/Components/Pages/HomePage/HomePage.scss
+++ b/frontend/src/Components/Pages/HomePage/HomePage.scss
@@ -28,7 +28,7 @@ $tablet-st: 1.5;
    width: 100%;
    height: 725px;
    margin: 0 42px 0 43px;
-   place-content: center;
+  //  place-content: center;
   
    background-color: $primary-color;
 
@@ -52,8 +52,9 @@ $tablet-st: 1.5;
      background-position: top left;
      background-size: 234%;
      height: 100%;
-     margin: 0;
+     margin: 0 auto;
      padding: 16px 16px 0;
+     justify-content: center;
    }
 
    @include laptop-style {
